--- a/style.css
+++ b/style.css
@@ -95,9 +95,9 @@ body {
   
   #conditions {
     color: #FFF;
-    font-size: 25px;
-    font-weight: bolder;
-    font-style: italic;
+    font-size: 22px;
+/*     font-weight: bolder;
+    font-style: italic; */
   }
   
 
@@ -114,6 +114,7 @@ body {
     font-size: 25px;
     font-weight: bold;
     margin-top: 10px;
+    padding: 10px;
   }
 
   #source{
